%% Person Status Progression Flow
%% This diagram shows how people move through pipeline statuses
%% See: product-docs/features/people-crm/frd.md for full details

stateDiagram-v2
    direction TB

    [*] --> prospect: person.created

    prospect --> attendee: meeting.attendance.recorded (F3, vision meetings)
    note right of prospect: Initial contact\nSource tracked

    attendee --> following_up: follow_up.initiated
    note right of attendee: Attended Vision Meeting

    following_up --> interviewed: interview.completed
    note right of following_up: Active follow-up

    interviewed --> core_group: commitment.recorded
    note right of interviewed: 5-criteria interview\nResult stored

    core_group --> launch_team: team.member.assigned (F8)
    note right of core_group: Signed commitment card\n4 C's eligible

    launch_team --> leader: team.leader.assigned (F8)
    note right of launch_team: Launch Team badge

    note right of leader: Leader badge

%% Manual Override Path (dashed lines represent manual changes)
%% Any status can be manually changed to any other status
%% This is shown as manual_override in the status service

%% Event Triggers (auto-advance handlers in src/lib/people/events.ts,
%% registered via src/lib/events/subscriptions.ts):
%% - prospect -> attendee: handleVisionMeetingAttendance (vision meetings only, prospects only)
%% - core_group -> launch_team: handleTeamMemberAssigned
%% - launch_team -> leader: handleTeamLeaderAssigned
%% - All others: Manual actions in People CRM

%% Soft Validation Warnings (src/lib/people/status.ts getStatusWarnings):
%% - Interview without Vision Meeting attendance: Warning shown
%% - Commitment without interview: Warning shown
%% - 4 C's assessment for non-core_group: Info shown
%% - Backward progression: Confirmation required
%% - Skipping statuses: Confirmation required

%% Out-of-Order Handling:
%% When an action triggers a status that skips intermediate stages,
%% the system auto-advances through all intermediate statuses.
%% Example: commitment.recorded for a prospect advances through:
%% prospect -> attendee -> following_up -> interviewed -> core_group
